# portal-da-transparencia-scrapper

./: .env  .gitignore  Dockerfile  README.md  cpf_result.json  docker-compose.yml  fastapi.sh  mkdocs.yml  pyproject.toml
desafio_mosqti/core/: loger.py  portal_transparencia.py
desafio_mosqti/core/crawlers/: __init__.py  details_links.py  pessoa_fisica_details.py  searcher.py  tabular_details.py
desafio_mosqti/core/elements_selectors/: selector.py
desafio_mosqti/core/filters/: __init__.py  cnpj_search_filter.py  cpf_search_filter.py
desafio_mosqti/core/interfaces/: base_crawler.py  base_details.py
desafio_mosqti/core/schemas/: search_result.py
desafio_mosqti/server/: creds.json  main.py  services.py
docs/: index.md
docs/crawler/: details.md  elements_selectors.md  filters.md  portal_transparencia.md  schemas.md  searcher.md
scrapper/core/: portal_transparencia.py
scrapper/core/crawlers/: __init__.py  details_links.py  searcher.py
scrapper/core/filters/: __init__.py  base_filter.py  cnpj_search_filter.py  cpf_search_filter.py
scrapper/core/interfaces/: base_crawler.py  base_details.py
scrapper/core/schemas/: search_result.py
scrapper/server/: credentials.json  main.py  services.py
site/: 404.html  index.html  objects.inv  openapi.json
site/crawler/details/: index.html
site/crawler/elements_selectors/: index.html
site/crawler/filters/: index.html
site/crawler/portal_transparencia/: index.html
site/crawler/schemas/: index.html
site/crawler/searcher/: index.html
site/search/: search_index.json
(+5 files in other folders)
