[tool.poetry]
name = "desafio-mosqti"
version = "0.1.0"
description = ""
authors = ["JEdmario16 <jedmario068@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.51.0"
pydantic = "^2.11.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
