[tool.poetry]
name = "desafio-mosqti"
version = "0.1.0"
description = ""
authors = ["JEdmario16 <jedmario068@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.51.0"
pydantic = "^2.11.3"
loguru = "^0.7.3"
fastapi = {extras = ["standard"], version = "^0.115.12"}
gspread = "^6.2.0"
oauth2client = "^4.1.3"
google-api-python-client = "^2.169.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.12"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
nest-asyncio = "^1.6.0"


[tool.poetry.group.docs.dependencies]
mkdocs-glightbox = "^0.4.0"
mkdocs-dracula-theme = "^1.0.7"
pymdown-extensions = "^10.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
